<resources>
    <string name="app_name">Lab01</string>
    <string name="increment">INCREMENT</string>
    <string name="decrement">DECREMENT</string>
    <string name="welcome_to_the_arcade">Welcome to Mr. Tra\'s Arcade!</string>
    <string name="count_0">Count: 0</string>
    <string name="arcade_game_background">Arcade game background</string>
    <string name="arcade_machine">Arcade machine</string>
    <string name="floating_rocket">Floating rocket</string>
    <string name="star">Star</string>
    <string name="floating__rocket_br">Floating rocket bottom right</string>
    <string name="level_one_intro_text">Level 1: These Kids</string>

    <string name="level_1_button_text">Level 1: These Kids</string>
    <string name="level_2_button_text">Level 2: Get Up!</string>
    <string name="level_3_button_text">Level 3: Submit Your Assignments</string>
    <string name="level_4_button_text">Level 4: Is It Really That Hard to Get an A?</string>
    <string name="level_5_button_text">Level 5: ???</string>
    <string name="play_button_text">Play</string>

    <string name="high_score_text">HIGH SCORE: %1$d</string>
    <string-array name="power_ups_array">
        <item>Shield</item>
        <item>Speed Boost</item>
        <item>Double Points</item>
        <item>None</item>
    </string-array>

    <string name="settings_title">Settings</string>
    <string name="settings_toggle_rocket">Show Rocket</string>
    <string name="settings_toggle_stars">Show Stars</string>
    <string name="settings_button_description">Open Settings</string>
    <string name="bonus_mode_toggle_description">Toggle Bonus Mode</string>
    <string name="lt"><![CDATA[<]]></string>
    <string name="power_up_name">Power Up Name</string>
    <string name="gt"><![CDATA[>]]></string>
    <string name="power_up_label">Power-up:</string>
    <string name="apply_button_text">Apply</string>
    <string name="reset_button_text">Reset</string>
    <string name="back_button_desc">Back</string>

    <string name="lab01_greeting">Hello World</string>
    <string name="lab01_press_me">Press Me</string>
    <string name="lab01_decrease">Decrease</string>

    <string name="lab01_main_greeting">Press a button!</string>
    <string name="lab01_count_label">Count: 0</string>
    <string name="lab01_textview_default_text">Color Changing Text</string>
    <string name="lab01_increment_button">Increment</string>
    <string name="lab01_decrement_button">Decrement</string>
    <string name="lab01_initial_zero">0</string>

    <string name="lab02_title_textview">Lab 02: GUI Elements</string>
    <string name="lab02_greeting_initial">Hello Mom!</string>
    <string name="lab02_likes_counter_initial">You have 0 likes</string>
    <string name="lab02_greeting_html_formatted"><b>Hello</b> <u>World</u>!</string>
    <string name="likes_count">You have %1$d likes</string>
    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
    </string-array>
    <string name="radio_label_up">Up</string>
    <string name="radio_label_down">Down</string>
    <string name="lab02_next_item_button">Next Planet</string>
    <string name="lab02_previous_item_button">Previous Planet</string>
    <string name="lab02_increment_button_text">Increment Planets</string>
    <string name="lab02_decrement_button_text">Decrement Planets</string>
    <string name="lab02_planet_display_initial">Current Planet</string>

    <string name="lab03_initial_corner_view_text">0</string>
    <string name="lab03_top_left_default_text">Top Left</string>
    <string name="lab03_top_right_default_text">Top Right</string>
    <string name="lab03_bottom_left_default_text">Bottom Left</string>
    <string name="lab03_bottom_right_default_text">Bottom Right</string>
    <string name="lab03_snackbar_font_changed">Font size changed to %1$dsp</string>
    <string name="lab03_snackbar_action_undo">UNDO</string>
    <string name="lab03_snackbar_font_reverted">Font size reverted to %1$dsp</string>
    <string name="lab03_reset_clicks_button_text">Reset Clicks</string>
    <string name="lab03_back_button_text">Back</string>

    <string name="layout_one_label">Layout One</string>
    <string name="greeting_one_text">Greeting One</string>
    <string name="greeting_two_text">Greeting Two</string>
    <string name="greeting_three_text">Greeting Three</string>
    <string name="greeting_four_text">Greeting Four</string>

    <string name="layout_two_label">Layout Two</string>
    <string name="centered_button_text">Centered</string>
    <string name="side_button_one_text">Side 1</string>
    <string name="side_button_two_text">Side 2</string>

    <string name="layout_three_label">Layout Three</string>
    <string name="top_textview_l3_text">Top Text</string>
    <string name="fill_button_l3_text">Fill Width Button</string>
    <string name="middle_button_l3_text">Middle Button</string>
    <string name="bottom_button_l3_text">Bottom Button</string>

    <string name="layout_four_label">Layout Four</string>
    <string name="l4_button1_text">Large TopLeft</string>
    <string name="l4_button2_text">Small RBias</string>
    <string name="l4_button3_text">Med Bias</string>
    <string name="l4_button4_text">Small Bias2</string>
    <string name="l4_button5_text">Large Central</string>

    <string name="layout_five_label">Layout Five</string>
    <string name="top_button_l5_text">Top Button</string>
    <string name="very_long_quote_text">"Four score and seven years ago our fathers brought forth on this continent, a new nation, conceived in Liberty, and dedicated to the proposition that all men are created equal. Now we are engaged in a great civil war, testing whether that nation, or any nation so conceived and so dedicated, can long endure. We are met on a great battle-field of that war. We have come to dedicate a portion of that field, as a final resting place for those who here gave their lives that that nation might live. It is altogether fitting and proper that we should do this. But, in a larger sense, we can not dedicate, we can not consecrate, we can not hallow, this ground. The brave men, living and dead, who struggled here, have consecrated it, far above our poor power to add or detract. The world will little note, nor long remember what we say here, but it can never forget what they did here. It is for us the living, rather, to be dedicated here to the unfinished work which they who fought here have thus far so nobly advanced. It is rather for us to be here dedicated to the great task remaining before us, that from these honored dead we take increased devotion to that cause for which they gave the last full measure of devotion, that we here highly resolve that these dead shall not have died in vain, that this nation, under God, shall have a new birth of freedom, and that government of the people, by the people, for the people, shall not perish from the earth."</string>

    <string name="layout_six_label">Layout Six</string>
    <string name="click_me_button_text">Click Me</string>
    <string name="click_me_1">Click Me 1</string>
    <string name="click_me_2">Click Me 2</string>
    <string name="click_me_3">Click Me 3</string>
    <string name="click_me_4">Click Me 4</string>
    <string name="click_me_5">Click Me 5</string>
    <string name="click_me_6">Click Me 6</string>
    <string name="click_me_7">Click Me 7</string>
    <string name="click_me_8">Click Me 8</string>
    <string name="click_me_9">Click Me 9</string>
    <string name="click_me_10">Click Me 10</string>
    <string name="click_me_11">Click Me 11</string>
    <string name="click_me_12">Click Me 12</string>

    <string name="layout_seven_label">Layout Seven</string>
    <string name="top_textview_l7_text">Layout Seven Top Text</string>
    <string name="reusable_button_text">Reusable Button</string>
    <string name="checkbox_label_template">Checkbox %1$d</string>

    <string name="l_button_1_text">L Button 1</string>
    <string name="m_button_1_text">M Button 1</string>
    <string name="l_button_2_text">L Button 2</string>
    <string name="s_button_1_text">S Button 1</string>
    <string name="s_button_2_text">S Button 2</string>


    <string name="greeting_l7_text">Hello from Layout Seven!</string>
    <string name="checkbox_option_1">Checkbox Option 1</string>
    <string name="checkbox_option_2">Checkbox Option 2</string>


    <string name="greeting_one">Greeting One</string>
    <string name="greeting_two">Greeting Two</string>
    <string name="greeting_three">Greeting Three</string>
    <string name="greeting_four">Greeting Four</string>
    <string name="checkbox_option_3">Checkbox Option 3</string>
    <string name="checkbox_option_4">Checkbox Option 4</string>
    <string name="checkbox_option_5">Checkbox Option 5</string>
    <string name="checkbox_option_6">Checkbox Option 6</string>
    <string name="checkbox_option_7">Checkbox Option 7</string>
    <string name="checkbox_option_8">Checkbox Option 8</string>
    <string name="checkbox_option_9">Checkbox Option 9</string>
    <string name="checkbox_option_10">Checkbox Option 10</string>
    <string name="checkbox_option_11">Checkbox Option 11</string>
    <string name="checkbox_option_12">Checkbox Option 12</string>
    <string name="checkbox_option_13">Checkbox Option 13</string>
    <string name="checkbox_option_14">Checkbox Option 14</string>
    <string name="checkbox_option_15">Checkbox Option 15</string>
    <string name="top_greeting_text">Greeting Earthling</string>
    <string name="fill_button_text">Like</string>
    <string name="middle_button_text">Welcome #3</string>
    <string name="bottom_button_text">We Made It</string>
    <string name="button_tl_text">I\'m Left</string>
    <string name="button_br_text">I\'m Right</string>
    <string name="layout_1">Layout 1</string>
    <string name="layout_2">Layout 2</string>
    <string name="layout_3">Layout 3</string>
    <string name="layout_4">Layout 4</string>
    <string name="layout_5">Layout 5</string>
    <string name="layout_6">Layout 6</string>
    <string name="layout_7">Layout 7</string>

    <string name="layout_label_4">Layout 4</string>
    <string name="layout_label_6">Layout 6</string>
    <string name="checkbox_option_16">Checkbox Option 16</string>
    <string name="checkbox_option_17">Checkbox Option 17</string>
    <string name="checkbox_option_18">Checkbox Option 18</string>
    <string name="checkbox_option_19">Checkbox Option 19</string>
    <string name="checkbox_option_20">Checkbox Option 20</string>
</resources>