<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_layout_seven">

    <TextView
        android:id="@+id/greeting_layout_seven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/greeting_l7_text"
        android:textSize="@dimen/large_text_size"
        android:padding="@dimen/small_padding"
        android:background="@color/greeting_l7_bg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <include
        android:id="@+id/included_reusable_layout"
        layout="@layout/reusable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/greeting_layout_seven"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/medium_margin"/>

    <ScrollView
        android:id="@+id/scrollview_checkboxes"
        android:layout_width="0dp" 
        android:layout_height="0dp"
        android:background="@color/scrollview_l7_bg"
        app:layout_constraintTop_toBottomOf="@id/included_reusable_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_default="wrap"
        app:layout_constraintHorizontal_bias="0.04" 
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_marginBottom="@dimen/medium_margin">

        <LinearLayout
            android:id="@+id/linear_layout_checkboxes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/small_padding">

            <!-- Add many CheckBox elements here -->
            <CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/checkbox_option_1" />
            <CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/checkbox_option_2" />
            <CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/checkbox_option_3" />
            <CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/checkbox_option_4" />
            <CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/checkbox_option_5" />
            <CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/checkbox_option_6" />
            <CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/checkbox_option_7" />
            <CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/checkbox_option_8" />
            <CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/checkbox_option_9" />
            <CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/checkbox_option_10" />
            <CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/checkbox_option_11" />
            <CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/checkbox_option_12" />
            <CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/checkbox_option_13" />
            <CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/checkbox_option_14" />
            <CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/checkbox_option_15" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/label_layout_seven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/layout_seven_label"
        android:textSize="@dimen/small_text_size"
        android:background="@color/white_transparent"
        android:padding="@dimen/tiny_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintVertical_bias="0.98" />

</androidx.constraintlayout.widget.ConstraintLayout>