<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_horizontal">

    <Button
        android:id="@+id/level_1_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/press_start_2p_regular"
        android:text="@string/level_1_button_text"
        android:background="@drawable/arcade_button_selector"
        android:textColor="#FFFFFFFF"
        android:padding="12dp" />

    <Button
        android:id="@+id/level_2_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/press_start_2p_regular"
        android:text="@string/level_2_button_text"
        android:background="@drawable/arcade_button_selector"
        android:textColor="#FFFFFFFF"
        android:padding="12dp" />

    <Button
        android:id="@+id/level_3_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/press_start_2p_regular"
        android:text="@string/level_3_button_text"
        android:background="@drawable/arcade_button_selector"
        android:textColor="#FFFFFFFF"
        android:padding="12dp" />

    <Button
        android:id="@+id/level_4_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/press_start_2p_regular"
        android:text="@string/level_4_button_text"
        android:background="@drawable/arcade_button_selector"
        android:textColor="#FFFFFFFF"
        android:padding="12dp" />

    <Button
        android:id="@+id/level_5_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/press_start_2p_regular"
        android:text="@string/level_5_button_text"
        android:background="@drawable/arcade_button_selector"
        android:textColor="#FFFFFFFF"
        android:padding="12dp" />

</LinearLayout>