<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageButton
        android:id="@+id/lab04_back_button"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/back_button_desc"
        android:scaleType="fitCenter"
        android:src="@drawable/back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button_level_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/arcade_button_selector"
            android:fontFamily="@font/press_start_2p_regular"
            android:padding="12dp"
            android:text="@string/layout_1"
            android:textColor="#FFFFFFFF" />
        <Button
            android:id="@+id/button_level_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/arcade_button_selector"
            android:fontFamily="@font/press_start_2p_regular"
            android:padding="12dp"
            android:text="@string/layout_2"
            android:textColor="#FFFFFFFF" />

        <Button
            android:id="@+id/button_level_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/arcade_button_selector"
            android:fontFamily="@font/press_start_2p_regular"
            android:padding="12dp"
            android:text="@string/layout_3"
            android:textColor="#FFFFFFFF" />

        <Button
            android:id="@+id/button_level_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/arcade_button_selector"
            android:fontFamily="@font/press_start_2p_regular"
            android:padding="12dp"
            android:text="@string/layout_4"
            android:textColor="#FFFFFFFF" />

        <Button
            android:id="@+id/button_level_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/arcade_button_selector"
            android:fontFamily="@font/press_start_2p_regular"
            android:padding="12dp"
            android:text="@string/layout_5"
            android:textColor="#FFFFFFFF" />
        <Button
            android:id="@+id/button_level_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/arcade_button_selector"
            android:fontFamily="@font/press_start_2p_regular"
            android:padding="12dp"
            android:text="@string/layout_6"
            android:textColor="#FFFFFFFF" />

        <Button
            android:id="@+id/button_level_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/arcade_button_selector"
            android:fontFamily="@font/press_start_2p_regular"
            android:padding="12dp"
            android:text="@string/layout_7"
            android:textColor="#FFFFFFFF" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>