<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenuActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_top_left"
        android:layout_width="@dimen/large_square_button"
        android:layout_height="@dimen/large_square_button"
        android:background="@color/royal_blue"
        android:text="@string/greeting_one"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_top_right"
        android:layout_width="@dimen/large_square_button"
        android:layout_height="@dimen/large_square_button"
        android:background="@color/green"
        android:text="@string/greeting_two"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_bottom_left"
        android:layout_width="@dimen/large_square_button"
        android:layout_height="@dimen/large_square_button"
        android:background="@color/medium_purple"
        android:text="@string/greeting_three"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_bottom_right"
        android:layout_width="@dimen/large_square_button"
        android:layout_height="@dimen/large_square_button"
        android:background="@color/navy"
        android:text="@string/greeting_four"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/label_layout_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/layout_one_label"
        android:textSize="@dimen/medium_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>