<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_yellow">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/top_button_layout_five"
        android:layout_width="@dimen/large_button_width"
        android:layout_height="@dimen/medium_button_height"
        android:background="@color/sky_blue"
        android:text="@string/top_button_l5_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/medium_margin" />

    <ScrollView
        android:id="@+id/scroll_view_vertical"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/pale_green"
        app:layout_constraintTop_toBottomOf="@id/top_button_layout_five"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/small_margin">

        <TextView
            android:id="@+id/long_text_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/medium_padding"
            android:text="@string/very_long_quote_text"
            android:textColor="@color/dark_text_color"
            android:textSize="@dimen/text_size_scroll_content" />

    </ScrollView>

    <TextView
        android:id="@+id/label_layout_five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/layout_five_label"
        android:textSize="@dimen/medium_text_size"
        android:background="@color/white_transparent"
        android:padding="@dimen/small_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95"/>

</androidx.constraintlayout.widget.ConstraintLayout>